--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 
     <head>
         <title>Exercícios WebPack</title>
+        <link rel='stylesheet' href='app.css'>
     </head>
     <body>
         <script src="bundle.js"></script>
